--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.0",
+    "framer-motion": "^12.9.1",
     "html2canvas-pro": "^1.5.8",
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
